<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/add_players"
        android:title="@string/add_players"/>
    <item android:id="@+id/clean_players"
        android:title="@string/clean_players" />
    <item android:id="@+id/share_teams"
        android:title="@string/share_teams" />
    <item android:id="@+id/shuffle_players"
        android:title="@string/shuffle_players" >
        <menu>
            <item android:id="@+id/shuffle_players_u"
                android:title="@string/shuffle_players_u" />
            <item android:id="@+id/shuffle_players_r"
                android:title="@string/shuffle_players_r" />
            <item android:id="@+id/shuffle_players_rbr"
                android:title="@string/shuffle_players_rbr" />
        </menu>
    </item>
</menu>